# robobread

./: .gitmodules  docker-compose.yml  nginx.conf
interaction/: .env  .gitignore  Dockerfile  README.md  check_modbus.py  main.py  pyproject.toml  requirements.txt
interaction/app/: controllers.py  services.py  utils.py
interaction/env/: pyvenv.cfg
server/: .env  .gitignore  Dockerfile  README.md  manage.py  pyproject.toml  requirements.txt
server/api/: urls.py  utils.py
server/api/orders/: admin.py  docs.py  models.py  serializers.py  urls.py  views.py
server/api/orders/migrations/: 0001_initial.py  0002_ordermodel_paid_at_alter_ordermodel_amount_and_more.py
server/api/payment/: admin.py  docs.py  models.py  serializers.py  services.py  settings.py  urls.py  utils.py  views.py
server/api/payment/migrations/: 0001_initial.py  0002_rename_payment_paymentmodel_and_more.py  0003_alter_receiptitemmodel_receipt_and_more.py  0004_remove_paymentmodel_payment_fail_and_more.py  0005_alter_receiptitemmodel_receipt.py  0006_receiptmodel_email_receiptmodel_phone_and_more.py
server/api/products/: admin.py  models.py  serializers.py  urls.py  views.py
server/api/products/migrations/: 0001_initial.py  0002_productmodel_cell.py
server/api/security/: urls.py  views.py
server/db/: db.sqlite3
server/scripts/: build.py  createsuperuser.py  faker.py  migrate.py  runserver.py  utils.py
server/server/: settings.py  urls.py  utils.py
terminal/: .env  .gitignore  README.md  check_mdb.py  main.py  pyproject.toml
terminal/app/: controllers.py  services.py
(+2 files in other folders)
